--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,11 +23,11 @@ a:hover {
 }
 
 body {
+  background: #ffffff;
   margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
 }
 
 h1 {
